fix: Pipe/Bar Yield Lot Abnormality Page Loading, Chat bot z-index

--- a/portal/si-portal/frontend/src/pages/portal/layouts/mainLayout/MainLayout.module.scss
+++ b/portal/si-portal/frontend/src/pages/portal/layouts/mainLayout/MainLayout.module.scss
@@ -143,7 +143,7 @@
     cursor: pointer;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     transition: background-color 0.3s ease;
-    z-index: 2;
+    z-index: 999;
 
     &:hover {
       background-color: #3f51b5;
